# girls-just-wanna-borrow-puns

./: Cargo.toml  README.md
phrases/: movie-quotes.txt  oscar-winning-movies.txt  rolling-stones-top-500.txt  wikipedia-idioms.txt
src/: main.rs
